VS2017 Hotspot Defined vsnprintf Function Causes C2084 Already Defined Compilation Error

XMLWordPrintable

    • b04
    • windows
    • Verified

        abstractInterpreter.cpp
        <directory>\open\src\hotspot\share\utilities/globalDefinitions_visCPP.hpp(173): error C2084: function 'int vsnprintf(char *const ,const ::size_t,const char *const ,va_list)' already has a body
        <directory of installed VS2017>\vs2017~1.0\devkit~1.gz\10\include\ucrt\stdio.h(1428): note: see previous definition of 'vsnprintf'

              Assignee:
              Kim Barrett
              Reporter:
              Lois Foltan
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: