8196882: VS2017 Hotspot Defined vsnprintf Function Causes C2084 Already Defined Compilation Error

Add os::vsnprintf and os::snprintf.

Reviewed-by: lfoltan, stuefe, mlarsson